--- a/_posts/2018-09-27-iframe.markdown
+++ b/_posts/2018-09-27-iframe.markdown
@@ -4,4 +4,4 @@ title:  "how to add iframe to Jekyll posts"
 date:   2018-09-27 15:57:00 +1200
 categories: jekyll update
 ---
-iframe width="560" height="315" src="https://www.youtube.com/embed/G7J5Y9tat3g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/G7J5Y9tat3g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
