--- a/_posts/2018-09-27-zotero.md
+++ b/_posts/2018-09-27-zotero.md
@@ -9,3 +9,8 @@ categories: jekyll update
 I thnk Zotero is a marvellous tool for people to collect and manage information and knowledge, especially when you are dealing with references. It is much better and flexible to manage your references when preparing journal  manuscripts.
 
 Now, you can also use recite works to check your reference before submitting to a journal.
+
+
+时光你好，我想和你聊一聊。不介意你对我的容颜动刀，毕竟比起皮囊，有趣的灵魂才是永葆青春的良药。但是，能否把我一周就能通过声音叫出学生名字的记忆力留给我？这么多可爱的孩子，真的是想尽快记住他们。同学们，假期愉快～～
+
+隆重介绍一下，我老婆。
