--- a/_posts/2018-11-05-Ωnyx.markdown
+++ b/_posts/2018-11-05-Ωnyx.markdown
@@ -9,3 +9,6 @@ categories: jekyll update
 Onyx: A graphical interface for Structural Equation Modeling
 
 http://onyx.brandmaier.de/
+
+
+<IFRAME SRC="http://www.eon.com.hk/common/fcg/estroke.fcg?task=getPage&page=demo/matchGame.html&bgcolor=ffffff" frameborder=0 scrolling=no WIDTH=480 HEIGHT=720></IFRAME>
