--- a/_posts/2018-11-05-Ωnyx.markdown
+++ b/_posts/2018-11-05-Ωnyx.markdown
@@ -12,3 +12,5 @@ http://onyx.brandmaier.de/
 
 
 <IFRAME SRC="http://www.eon.com.hk/common/fcg/estroke.fcg?task=getPage&page=demo/matchGame.html&bgcolor=ffffff" frameborder=0 scrolling=no WIDTH=480 HEIGHT=720></IFRAME>
+
+<IFRAME SRC="http://www.eon.com.hk/common/fcg/estroke.fcg?task=getPage&page=demo/estroke.html" frameborder=0 scrolling=no WIDTH=640 HEIGHT=680></IFRAME>
